--- a/hefty-algebras.cabal
+++ b/hefty-algebras.cabal
@@ -142,3 +142,50 @@ test-suite mylang-test
     hs-source-dirs:     lang-mylang/tests
     default-language:   Haskell2010
     other-modules:      
+
+library paret-lib
+    hs-source-dirs:     lang-paret/lib
+    exposed-modules:    Syntax
+                        TypeCheck
+    build-depends:      base >=4.14 && <5,
+                        containers >= 0.6.5.1,
+                        transformers >= 0.5.6.2,
+                        hefty-algebras
+    default-language:   Haskell2010
+    default-extensions: TypeApplications
+                        TypeOperators
+                        ScopedTypeVariables
+                        LambdaCase
+                        FlexibleContexts
+    ghc-options:        -W
+                        -O3
+                        -threaded
+
+executable paret
+    main-is:            Main.hs
+    build-depends:      base >= 4.14,
+                        containers >= 0.6.5.1,
+                        transformers >= 0.5.6.2,
+                        paret-lib
+    hs-source-dirs:     lang-paret/app
+    default-language:   Haskell2010
+    default-extensions: TypeApplications
+                        TypeOperators
+                        ScopedTypeVariables
+                        LambdaCase
+                        FlexibleContexts
+    ghc-options:        -O3
+                        -threaded
+
+test-suite paret-test
+    type:               exitcode-stdio-1.0
+    main-is:            Main.hs
+    build-depends:      base >= 4.14,
+                        transformers >= 0.5.6.2,
+                        mtl >= 2.3.1,
+                        HUnit ^>= 1.6.1,
+                        hefty-algebras,
+                        paret-lib
+    hs-source-dirs:     lang-paret/tests
+    default-language:   Haskell2010
+    other-modules:      
